# face-detection-cpp

./: CMakeLists.txt  LICENSE  README.md  build_and_run.bat  faceDetection.cpp
